--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-icons": "^3.10.0",
+    "react-particles": "^0.0.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
-    "typescript": "~3.7.2"
+    "react-typical": "^0.1.3",
+    "tsparticles": "^1.15.2",
+    "typescript": "^3.9.5"
   },
   "scripts": {
     "start": "react-scripts start",
